# graph-scheme-cpp-mpi

./: .gitignore  .gitmodules  CMakeLists.txt  HelloWorldModuleLoader.cpp  HelloWorldModuleLoader.h  MPIController.h  MPIGraphScheme.cpp  MPIGraphScheme.h  MPIGraphSchemeModule.cpp  MPIGraphSchemeModule.h  ModuleLoader.h  ModuleMapBuilder.cpp  ModuleMapBuilder.h  Procdure.h  Procedure.h  ProcedureFactory.cpp  ProcedureFactory.h  SimpleDataListener.cpp  SimpleDataListener.h  SimpleMPIController.cpp  SimpleMPIController.h  graph-scheme-cpp-architecture.puml  input.data  main.cpp
cmake/: FindFruit.cmake
